--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,51 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.container {
+  @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-8;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.text-shadow-for-white-bg {
+  /* text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3); */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
+.video-shadow {
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 1) 11%,
+    rgba(255, 255, 255, 0.7008053221288515) 30%,
+    rgba(255, 255, 255, 0) 100%
+  );
+}
+
+/* set if productions */
+/* html,
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
+} */
+
+summary {
+  list-style: none; /* Removes the marker */
+  cursor: pointer; /* Optional: Change cursor to pointer for better UX */
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+.product-card:hover img {
+  scale: 1.1;
+}
+
+.header-active {
+  animation: header-anm 0.7s ease-in-out 1;
+  box-shadow: 0 -6px 10px 5px rgba(0, 0, 0, 0.5);
+}
+
+@keyframes header-anm {
+  0% {
+    transform: translateY(-100%);
+    box-shadow: 0 -6px 10px 5px rgba(0, 0, 0, 0);
+  }
+  100% {
+    transform: translateY(0);
+    box-shadow: 0 -6px 10px 5px rgba(0, 0, 0, 0.5);
   }
 }
